--- a/.github/workflows/deploy-hetzner.yml
+++ b/.github/workflows/deploy-hetzner.yml
@@ -13,10 +13,10 @@ env:
   ANSIBLE_FORCE_COLOR: true
   TARGET_PLATFORMS: linux/arm64
   SEGMENT_DOWNLOAD_TIMEOUT_MINS: 2
-  HCLOUD_KEY: {{ secrets.HCLOUD_KEY }}
-  REGISTRY_PASSWORD: {{ secrets.REGISTRY_PASSWORD }}
-  REGISTRY_USERNAME: {{ secrets.REGISTRY_USERNAME }}
-  WEBSITE_DOMAIN: {{ secrets.WEBSITE_DOMAIN }}
+  HCLOUD_KEY: '{{ secrets.HCLOUD_KEY }}'
+  REGISTRY_PASSWORD: '{{ secrets.REGISTRY_PASSWORD }}'
+  REGISTRY_USERNAME: '{{ secrets.REGISTRY_USERNAME }}'
+  WEBSITE_DOMAIN: '{{ secrets.WEBSITE_DOMAIN }}'
 
 jobs:
   changes:
