--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-frontend",
   "license": "MIT",
-  "devDependencies": {
-    "bun-types": "^1.0.3"
+  "scripts": {
+    "build": "bun build src/main.ts --outdir dist"
   }
 }
